--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 # Created by https://www.toptal.com/developers/gitignore/api/xcode,c++,java,python
 # Edit at https://www.toptal.com/developers/gitignore?templates=xcode,c++,java,python
 # python/
-
+out/
 ### C++ ###
 # Prerequisites
 *.d
